--- a/config/example.toml
+++ b/config/example.toml
@@ -2,10 +2,10 @@ title = "Example Config"
 
 [app]
 # error, debug, warn, info, trace
-logLevel = "debug"
+logLevel = "trace"
+# logPath = ""
 
 [controller]
-
 n2IpFrom = "10.100.0.1"
 n2IpTo = "10.100.0.1"
 ueNum = 1
