--- a/config/example.toml
+++ b/config/example.toml
@@ -2,15 +2,15 @@ title = "Example Config"
 
 [app]
 # error, debug, warn, info, trace
-logLevel = "trace"
+logLevel = "info"
 # logPath = ""
 
 [controller]
 n2IpFrom = "10.100.0.1"
 n2IpTo = "10.100.0.1"
-ueNum = 1
+ueNum = 1000
 uePerGnb = 20000
-uePerSec = 1
+uePerSec = 3
 initPDUWhenAllUERegistered = false
 
 [gnb]
