--- a/config/example.toml
+++ b/config/example.toml
@@ -6,9 +6,10 @@ logLevel = "info"
 # logPath = ""
 
 [controller]
-usingInterface = "ens3"
+n2Interface = "ens3"
 n2IpFrom = "223.193.7.230"
 n2IpTo = "223.193.7.239"
+n3Interface = "ens3"
 n3IpFrom = "223.193.7.240"
 n3IpTo = "223.193.7.249"
 ueNum = 2
